--- a/view/winner.html
+++ b/view/winner.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="customstyles.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="customstyles.css">
-</head>
-
-<body>
+  <body>
     <h1>👑The Winner of the hunger games👑</h1>
     <div class="picture-containerRound">
-        <div class="DistContainer">
-            <h3>Test Player 1 </h3>
+      <div class="DistContainer">
+        <h3>Test Player 1</h3>
 
-            <div class="">
-                <img src="https://cdn.discordapp.com/avatars/934510294712082522/c67a960ff780778185bd4f097929282f.webp?size=64"
-                    alt="Image 1">
-            </div>
+        <div class="">
+          <img
+            src="https://cdn.discordapp.com/avatars/934510294712082522/c67a960ff780778185bd4f097929282f.webp?size=64"
+            alt="Image 1"
+          />
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
